[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/main_button_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Script/Settings.gd" type="Script" id=2]
[ext_resource path="res://Fonts/joystix monospace.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 88
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Settings" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 640, 512 )
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.113725, 0.0705882, 0.121569, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 250.0
margin_right = -100.0
margin_bottom = -150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Margin"]
margin_right = 1720.0
margin_bottom = 680.0
custom_constants/separation = 80

[node name="HeaderLay" type="CenterContainer" parent="Margin/VBoxContainer"]
margin_right = 1720.0
margin_bottom = 106.0

[node name="Header" type="Label" parent="Margin/VBoxContainer/HeaderLay"]
margin_left = 568.0
margin_right = 1152.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 1 )
text = "SETTINGS"

[node name="MenuItemsLay" type="CenterContainer" parent="Margin/VBoxContainer"]
margin_top = 186.0
margin_right = 1720.0
margin_bottom = 502.0

[node name="CenterContainer" type="CenterContainer" parent="Margin/VBoxContainer/MenuItemsLay"]
margin_left = 595.0
margin_right = 1125.0
margin_bottom = 316.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Margin/VBoxContainer/MenuItemsLay/CenterContainer"]
margin_right = 530.0
margin_bottom = 316.0
custom_constants/separation = 70

[node name="VBoxContainer2" type="VBoxContainer" parent="Margin/VBoxContainer/MenuItemsLay/CenterContainer/VBoxContainer"]
margin_right = 530.0
margin_bottom = 163.0
custom_constants/separation = 70

[node name="Label" type="Label" parent="Margin/VBoxContainer/MenuItemsLay/CenterContainer/VBoxContainer/VBoxContainer2"]
margin_right = 530.0
margin_bottom = 77.0
custom_fonts/font = ExtResource( 1 )
text = "DIFFICALTY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="Margin/VBoxContainer/MenuItemsLay/CenterContainer/VBoxContainer/VBoxContainer2"]
margin_top = 147.0
margin_right = 530.0
margin_bottom = 163.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 100.0
max_value = 1000.0
step = 100.0
value = 100.0
tick_count = 1

[node name="Button" type="Button" parent="Margin/VBoxContainer/MenuItemsLay/CenterContainer/VBoxContainer"]
margin_top = 233.0
margin_right = 530.0
margin_bottom = 316.0
custom_styles/focus = SubResource( 2 )
custom_fonts/font = ExtResource( 1 )
text = "BACK"
flat = true
[connection signal="value_changed" from="Margin/VBoxContainer/MenuItemsLay/CenterContainer/VBoxContainer/VBoxContainer2/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="Margin/VBoxContainer/MenuItemsLay/CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
